# convention

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: class.hpp  header_only.hpp  struct.hpp  template.hpp  template.inl
src/: class.cpp  main.cpp  struct.cpp
tree_a/: CMakeLists.txt
tree_a/include/: struct.hpp  template.hpp  template.inl
tree_a/src/: header_only_impl.cpp  main.cpp  struct.cpp
tree_b/: CMakeLists.txt
tree_b/include/: symlink
tree_b/internal/: CMakeLists.txt
tree_b/internal/class_dependency_architecture/: architure.md  pointers.md
tree_b/internal/folder/: CMakeLists.txt  class2.cpp
tree_b/internal/variadic/: readme.md  varidic_function.hpp  varidic_function_template.hpp
tree_b/lib/: CMakeLists.txt
tree_b/src/: CMakeLists.txt
